# bevy-boids

./: Cargo.toml
src/: main.rs
src/simulation/: mod.rs
src/simulation/boid/: components.rs  mod.rs  systems.rs
src/simulation/movement/: components.rs  mod.rs  systems.rs
